Compressed videos and changed tablet videos

--- a/index.html
+++ b/index.html
@@ -893,7 +893,7 @@
                                                 <div class="color-overlay"></div>
                                                 <video class="tablet-image" width="100%" style="object-fit: cover;"
                                                     autoplay muted loop>
-                                                    <source src="videos/one-for-all.mp4" type="video/mp4">
+                                                    <source src="videos/relationship-manager.mp4" type="video/mp4">
                                                     Your browser does not support the video tag.
                                                 </video>
                                             </div>
@@ -981,91 +981,91 @@
                     <div class="d-flex align-items-center mt-5">
                         <div class="animated-box">
                             <div class="ellipse"></div>
-                            <img src="./images/brand-1.png" class="brand-img active">
-                            <img src="./images/brand-2.png" class="brand-img">
-                            <img src="./images/brand-3.png" class="brand-img">
-                            <img src="./images/brand-4.png" class="brand-img ">
+                            <img src="./images/arrow-logo.png" class="brand-img arrow active">
+                            <img src="./images/realezi-logo.png" class="brand-img">
+                            <img src="./images/arrow-logo.png" class="brand-img arrow">
+                            <img src="./images/realezi-logo.png" class="brand-img ">
                         </div>
                         <div class="reverse-animated-box">
                             <div class="orange-ellipse"></div>
-                            <img src="./images/brand-4.png" class="brand-img active">
-                            <img src="./images/brand-1.png" class="brand-img">
-                            <img src="./images/brand-2.png" class="brand-img">
-                            <img src="./images/brand-3.png" class="brand-img">
+                            <img src="./images/realezi-logo.png" class="brand-img active">
+                            <img src="./images/arrow-logo.png" class="brand-img arrow">
+                            <img src="./images/realezi-logo.png" class="brand-img">
+                            <img src="./images/arrow-logo.png" class="brand-img arrow">
                         </div>
                         <div class="animated-box">
                             <div class="ellipse"></div>
-                            <img src="./images/brand-1.png" class="brand-img active">
-                            <img src="./images/brand-2.png" class="brand-img">
-                            <img src="./images/brand-3.png" class="brand-img">
-                            <img src="./images/brand-4.png" class="brand-img ">
+                            <img src="./images/arrow-logo.png" class="brand-img arrow active">
+                            <img src="./images/realezi-logo.png" class="brand-img">
+                            <img src="./images/arrow-logo.png" class="brand-img arrow">
+                            <img src="./images/realezi-logo.png" class="brand-img ">
                         </div>
                         <div class="reverse-animated-box">
                             <div class="orange-ellipse"></div>
-                            <img src="./images/brand-4.png" class="brand-img active">
-                            <img src="./images/brand-1.png" class="brand-img">
-                            <img src="./images/brand-2.png" class="brand-img">
-                            <img src="./images/brand-3.png" class="brand-img">
+                            <img src="./images/realezi-logo.png" class="brand-img active">
+                            <img src="./images/arrow-logo.png" class="brand-img arrow">
+                            <img src="./images/realezi-logo.png" class="brand-img">
+                            <img src="./images/arrow-logo.png" class="brand-img arrow">
                         </div>
                     </div>
                     <div class="d-flex align-items-center mt-3">
                         <div class="reverse-animated-box">
                             <div class="orange-ellipse"></div>
-                            <img src="./images/brand-4.png" class="brand-img active">
-                            <img src="./images/brand-1.png" class="brand-img">
-                            <img src="./images/brand-2.png" class="brand-img">
-                            <img src="./images/brand-3.png" class="brand-img">
+                            <img src="./images/realezi-logo.png" class="brand-img active">
+                            <img src="./images/arrow-logo.png" class="brand-img arrow">
+                            <img src="./images/realezi-logo.png" class="brand-img">
+                            <img src="./images/arrow-logo.png" class="brand-img arrow">
                         </div>
                         <div class="animated-box">
                             <div class="ellipse"></div>
-                            <img src="./images/brand-1.png" class="brand-img active">
-                            <img src="./images/brand-2.png" class="brand-img">
-                            <img src="./images/brand-3.png" class="brand-img">
-                            <img src="./images/brand-4.png" class="brand-img ">
+                            <img src="./images/arrow-logo.png" class="brand-img arrow active">
+                            <img src="./images/realezi-logo.png" class="brand-img">
+                            <img src="./images/arrow-logo.png" class="brand-img arrow">
+                            <img src="./images/realezi-logo.png" class="brand-img ">
                         </div>
                         <div class="reverse-animated-box">
                             <div class="orange-ellipse"></div>
-                            <img src="./images/brand-4.png" class="brand-img active">
-                            <img src="./images/brand-1.png" class="brand-img">
-                            <img src="./images/brand-2.png" class="brand-img">
-                            <img src="./images/brand-3.png" class="brand-img">
+                            <img src="./images/realezi-logo.png" class="brand-img active">
+                            <img src="./images/arrow-logo.png" class="brand-img arrow">
+                            <img src="./images/realezi-logo.png" class="brand-img">
+                            <img src="./images/arrow-logo.png" class="brand-img arrow">
                         </div>
                         <div class="animated-box">
                             <div class="ellipse"></div>
-                            <img src="./images/brand-1.png" class="brand-img active">
-                            <img src="./images/brand-2.png" class="brand-img">
-                            <img src="./images/brand-3.png" class="brand-img">
-                            <img src="./images/brand-4.png" class="brand-img ">
+                            <img src="./images/arrow-logo.png" class="brand-img arrow active">
+                            <img src="./images/realezi-logo.png" class="brand-img">
+                            <img src="./images/arrow-logo.png" class="brand-img arrow">
+                            <img src="./images/realezi-logo.png" class="brand-img">
                         </div>
                     </div>
                     <div class="d-flex align-items-center  mt-3">
                         <div class="animated-box">
                             <div class="ellipse"></div>
-                            <img src="./images/brand-1.png" class="brand-img active">
-                            <img src="./images/brand-2.png" class="brand-img">
-                            <img src="./images/brand-3.png" class="brand-img">
-                            <img src="./images/brand-4.png" class="brand-img ">
+                            <img src="./images/arrow-logo.png" class="brand-img arrow active">
+                            <img src="./images/realezi-logo.png" class="brand-img">
+                            <img src="./images/arrow-logo.png" class="brand-img arrow">
+                            <img src="./images/realezi-logo.png" class="brand-img ">
                         </div>
                         <div class="reverse-animated-box">
                             <div class="orange-ellipse"></div>
-                            <img src="./images/brand-4.png" class="brand-img active">
-                            <img src="./images/brand-1.png" class="brand-img">
-                            <img src="./images/brand-2.png" class="brand-img">
-                            <img src="./images/brand-3.png" class="brand-img">
+                            <img src="./images/realezi-logo.png" class="brand-img active">
+                            <img src="./images/arrow-logo.png" class="brand-img arrow">
+                            <img src="./images/realezi-logo.png" class="brand-img">
+                            <img src="./images/arrow-logo.png" class="brand-img arrow">
                         </div>
                         <div class="animated-box">
                             <div class="ellipse"></div>
-                            <img src="./images/brand-1.png" class="brand-img active">
-                            <img src="./images/brand-2.png" class="brand-img">
-                            <img src="./images/brand-3.png" class="brand-img">
-                            <img src="./images/brand-4.png" class="brand-img ">
+                            <img src="./images/arrow-logo.png" class="brand-img arrow active">
+                            <img src="./images/realezi-logo.png" class="brand-img">
+                            <img src="./images/arrow-logo.png" class="brand-img arrow">
+                            <img src="./images/realezi-logo.png" class="brand-img ">
                         </div>
                         <div class="reverse-animated-box">
                             <div class="orange-ellipse"></div>
-                            <img src="./images/brand-4.png" class="brand-img active">
-                            <img src="./images/brand-1.png" class="brand-img">
-                            <img src="./images/brand-2.png" class="brand-img">
-                            <img src="./images/brand-3.png" class="brand-img">
+                            <img src="./images/realezi-logo.png" class="brand-img active">
+                            <img src="./images/arrow-logo.png" class="brand-img arrow">
+                            <img src="./images/realezi-logo.png" class="brand-img">
+                            <img src="./images/arrow-logo.png" class="brand-img arrow">
                         </div>
                     </div>
                 </div>
@@ -1702,10 +1702,163 @@
     <script src="./scripts/lottiesfiles.js"></script>
     <script src="./background-video.js"></script>
     <!-- <script defer src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script> -->
-    <script defer src="./rive-animations.js"></script>
+    <!-- <script defer src="./rive-animations.js"></script> -->
     <script defer src="section-transition.js"></script>
     <script defer src="./mobile-view.js"></script>
     <script defer src="./filter-section.js"></script>
+    <script>
+        const riveAnimations = {};
+
+        // Function to initialize Rive animation
+        function loadRiveAnimation(
+            key,
+            src,
+            canvasId,
+            stateMachine = "State Machine 1"
+        ) {
+            return new rive.Rive({
+                src: src,
+                canvas: document.getElementById(canvasId),
+                autoplay: true,
+                stateMachines: stateMachine,
+                onLoad: () => {
+                    riveAnimations[key].resizeDrawingSurfaceToCanvas();
+                },
+            });
+        }
+
+        // Function to clean up and reload animations on click
+        function handleClick(clickedKey) {
+            for (const key in riveAnimations) {
+                if (riveAnimations.hasOwnProperty(key)) {
+                    riveAnimations[key].cleanup();
+                    riveAnimations[key] = loadRiveAnimation(
+                        key,
+                        riveConfigs[key].src,
+                        riveConfigs[key].id,
+                        "State Machine 1"
+                    );
+                }
+            }
+
+            riveAnimations[clickedKey].cleanup();
+            riveAnimations[clickedKey] = loadRiveAnimation(
+                clickedKey,
+                riveConfigs[clickedKey].src,
+                riveConfigs[clickedKey].id,
+                "Timeline 1"
+            );
+        }
+
+        // Add event listeners to each element for click and touchstart
+        function addEventListeners(elementId) {
+            const element = document.getElementById(elementId);
+
+            element.addEventListener("click", function () {
+                handleClick(elementId);
+            });
+
+            element.addEventListener("touchstart", function (event) {
+                event.preventDefault();
+                handleClick(elementId);
+            });
+        }
+
+        // List of canvas elements and corresponding Rive animation files
+        const riveConfigs = {
+            residential: { id: "residential", src: "./riv/building.riv" },
+            commercial: { id: "commercial", src: "./riv/commercial.riv" },
+            plot: { id: "plot", src: "./riv/plot.riv" },
+            pg: { id: "pg", src: "./riv/pg.riv" },
+            coworkingspace: { id: "coworkingspace", src: "./riv/coworkingspace.riv" },
+        };
+
+        // Create an Intersection Observer to defer loading of animations
+        const observer = new IntersectionObserver(
+            (entries, observer) => {
+                entries.forEach((entry) => {
+                    if (entry.isIntersecting) {
+                        const canvasId = entry.target.id;
+                        const config = riveConfigs[canvasId];
+
+                        if (config && !riveAnimations[canvasId]) {
+                            // Load the Rive animation when the element becomes visible
+                            riveAnimations[canvasId] = loadRiveAnimation(
+                                canvasId,
+                                config.src,
+                                config.id
+                            );
+
+                            // Add event listeners to handle click events
+                            addEventListeners(canvasId);
+
+                            // Stop observing once the animation has been loaded
+                            observer.unobserve(entry.target);
+                        }
+                    }
+                });
+            },
+            {
+                root: null, // Viewport is the root
+                rootMargin: "0px",
+                threshold: 0.1, // Trigger when 10% of the element is visible
+            }
+        );
+
+        // Observe each canvas element
+        Object.values(riveConfigs).forEach((config) => {
+            const canvasElement = document.getElementById(config.id);
+            if (canvasElement) {
+                observer.observe(canvasElement);
+            }
+        });
+
+        document.getElementById("rent-btn").addEventListener("click", () => {
+            riveAnimations.pg.cleanup();
+            riveAnimations.pg = new rive.Rive({
+                src: "./riv/pg.riv",
+                canvas: document.getElementById("pg"),
+                autoplay: true,
+                stateMachines: "State Machine 1",
+                onLoad: () => {
+                    riveAnimations.pg.resizeDrawingSurfaceToCanvas();
+                },
+            });
+
+            riveAnimations.coworkingspace.cleanup();
+            riveAnimations.coworkingspace = new rive.Rive({
+                src: "./riv/coworkingspace.riv",
+                canvas: document.getElementById("coworkingspace"),
+                autoplay: true,
+                stateMachines: "State Machine 1",
+                onLoad: () => {
+                    riveAnimations.coworkingspace.resizeDrawingSurfaceToCanvas();
+                },
+            });
+        });
+
+        // Party Popper Animation
+        const partyPopper = new rive.Rive({
+            src: "./riv/partyPopper.riv",
+            canvas: document.getElementById("partyPopper"),
+            autoplay: true,
+            stateMachines: "State Machine 1",
+            onLoad: () => {
+                partyPopper.resizeDrawingSurfaceToCanvas();
+            },
+        });
+
+        const partyPopper2 = new rive.Rive({
+            src: "./riv/partyPopper.riv",
+            canvas: document.getElementById("partyPopper2"),
+            autoplay: true,
+            stateMachines: "State Machine 1",
+            onLoad: () => {
+                partyPopper.resizeDrawingSurfaceToCanvas();
+            },
+        });
+
+    </script>
 </body>
 
 </html>
