Removed two links from footer, added anchor tag in some places, compressed videos

--- a/index.html
+++ b/index.html
@@ -161,7 +161,6 @@
             <div class="mobile-nav">
                 <ul>
                     <li>Home</li>
-                    <li>Resources</li>
                     <li>Buy or Rent</li>
                     <li>We are Hiring</li>
                     <li>Refer & Earn</li>
@@ -1096,7 +1095,7 @@
                         <img src="./images/right-arrow-circle.png" width="20px">
                     </div>
                 </div>
-                <button>View<br> more</button>
+                <a href="/"><button>View<br> more</button></a>
             </div>
         </div>
 
@@ -1292,31 +1291,30 @@
         <div class="section-six-mobile-view d-block d-sm-none">
             <div class="tools-container d-flex justify-content-start">
                 <h2>Tools &<br>Insights</h2>
-
-                <div class="tools-card d-flex align-items-center justify-content-between">
+                <a href="/" style="text-decoration: none; color: #000000;"
+                    class="tools-card d-flex align-items-center justify-content-between">
                     <img src="./images/tools-1.png" alt="Solar Calculator" width="100px">
                     <div class="content text-left">
                         <h4>Solar Calculator</h4>
-                        <p>Calculate your energy savings and power up your home sustainably
-                        </p>
+                        <p>Calculate your energy savings and power up your home sustainably</p>
                     </div>
-                </div>
-
-                <div class="tools-card d-flex align-items-center justify-content-between">
+                </a>
+                <a href="/" style="text-decoration: none; color: #000000;"
+                    class="tools-card d-flex align-items-center justify-content-between">
                     <img src="./images/tools-2.png" alt="EMI Calculator" width="90px">
                     <div class="content text-left">
                         <h4>EMI Calculator</h4>
                         <p>Easily estimate your solar panel EMI with our quick and reliable calculator</p>
                     </div>
-                </div>
-
-                <div class="tools-card d-flex align-items-center justify-content-between">
-                    <img src="./images/tools-3.png" alt="EMI Calculator" width="90px">
+                </a>
+                <a href="/" style="text-decoration: none; color: #000000;"
+                    class="tools-card d-flex align-items-center justify-content-between">
+                    <img src="./images/tools-3.png" alt="Loan Calculator" width="90px">
                     <div class="content text-left">
                         <h4>Loan Calculator</h4>
                         <p>Discover the perfect solar loan plan tailored to your budget</p>
                     </div>
-                </div>
+                </a>
             </div>
         </div>
 
@@ -1357,7 +1355,7 @@
 
                 <div class="plans-card text-center d-flex align-items-center justify-content-center flex-column">
                     <img src="./images/plans-3.png" alt="" width="110px">
-                    <h4>Property Listings</h4>
+                    <h4>Property Shortlisting</h4>
                 </div>
 
                 <div class="plans-card text-center d-flex align-items-center justify-content-center flex-column">
@@ -1376,13 +1374,13 @@
 
         <div class="section-eight-mobile-view px-3 d-block d-sm-none">
             <h2>Looking for Something Else?</h2>
-            <div class="d-flex align-items-center justify-content-between">
+            <a href="/" class="d-flex align-items-center justify-content-between">
                 <img src="./images/property-on-sale.png" width="100px" alt="">
                 <div>
                     <h4>Sell Your Property</h4>
                     <p>Got a property? List it and get site visits instantly.</p>
                 </div>
-            </div>
+            </a>
         </div>
 
         <div class="section-nine-mobile-view px-3 text-right d-block d-sm-none">
@@ -1488,7 +1486,6 @@
                                 <li>About us</li>
                                 <li>Blog</li>
                                 <li>Career</li>
-                                <li>Contact support</li>
                                 <li>Get in touch</li>
                                 <li>FAQs</li>
                                 <button
@@ -1544,7 +1541,6 @@
                                 </svg></span></h4>
                         <div class="d-flex">
                             <ul>
-                                <li>Find a Right Property</li>
                                 <li>Sell or Rent Your Property</li>
                                 <li>Build Your Home From Scratch </li>
                                 <li>Interior Designing & Decor</li>
