Added autocomplete off to search engine in mobile view

--- a/index.html
+++ b/index.html
@@ -441,7 +441,8 @@
                 </ul>
             </div>
             <div class="search-engine" id="open-filters">
-                <input type="text" name="search" placeholder="Search locality, landmark, building or project">
+                <input type="text" name="search" placeholder="Search locality, landmark, building or project"
+                    autocomplete="off">
                 <img src="./images/Search.png" width="45px" alt="Search Icon">
             </div>
             <div class="bottom-container text-center">
