--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="/customerHomepage.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,7 +17,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Familjen+Grotesk:ital,wght@0,400..700;1,400..700&family=Offside&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
-    <title>Customer Homepage</title>
+    <title>Realezi</title>
 </head>
 
 <body>
@@ -164,6 +165,7 @@
                     <li>Buy or Rent</li>
                     <li>We are Hiring</li>
                     <li>Refer & Earn</li>
+                    <li>About Us</li>
                     <li>Contact Us</li>
                 </ul>
             </div>
@@ -174,7 +176,9 @@
         <!-- Section One -->
         <div class="section-one d-none d-sm-block">
             <div class="container">
-                <video autoplay muted id="background-video" style="margin-top: -25px">
+                <img id="video-placeholder" src="./images/video-placeholder.png" alt="Loading video"
+                    style="width: 100%;">
+                <video autoplay muted id="background-video" class="d-none" style="margin-top: -25px">
                     <source src="./videos/main-video.mp4" type="video/mp4">
                     Your browser does not support HTML5 video.
                 </video>
@@ -225,7 +229,7 @@
                             Realezi.
                             From first-time buyers to professional sellers, we make your journey from click to close
                             effortless. </p>
-                        <button>Try it yourself</button>
+                        <a href="/" style="color: unset"><button>Try it yourself</button></a>
                     </div>
                 </div>
             </div>
@@ -1698,7 +1702,7 @@
     <script src="./scripts/rive.js"></script>
     <script src="./scripts/lottiesfiles.js"></script>
     <script src="./background-video.js"></script>
-    <!-- <script defer src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script> -->
+    <!-- <script defer src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script> --> -->
     <!-- <script defer src="./rive-animations.js"></script> -->
     <script defer src="section-transition.js"></script>
     <script defer src="./mobile-view.js"></script>
