Compressed hero section image

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         <!-- Section One -->
         <div class="section-one d-none d-sm-block">
             <div class="container">
-                <img id="video-placeholder" src="./images/video-placeholder.png" alt="Loading video"
+                <img id="video-placeholder" src="./images/video-placeholder.jpg" alt="Loading video"
                     style="width: 100%;">
                 <video autoplay muted id="background-video" class="d-none" style="margin-top: -25px">
                     <source src="./videos/main-video.mp4" type="video/mp4">
