Removed autoplay attribute from video

--- a/index.html
+++ b/index.html
@@ -165,8 +165,8 @@
                     <li>Buy or Rent</li>
                     <li>We are Hiring</li>
                     <li>Refer & Earn</li>
-                    <li>About Us</li>
-                    <li>Contact Us</li>
+                    <li>About</li>
+                    <li>Contact</li>
                 </ul>
             </div>
         </nav>
@@ -178,7 +178,7 @@
             <div class="container">
                 <img id="video-placeholder" src="./images/video-placeholder.jpg" alt="Loading video"
                     style="width: 100%;">
-                <video autoplay muted id="background-video" class="d-none" style="margin-top: -25px">
+                <video muted id="background-video" class="d-none" style="margin-top: -25px">
                     <source src="./videos/main-video.mp4" type="video/mp4">
                     Your browser does not support HTML5 video.
                 </video>
@@ -1452,12 +1452,12 @@
                     <p class="fw-semibold">Ananya Sharma</p>
                 </div>
                 <div class="customer-review-card">
-                    <img src="./images/customer-review-2.png" alt="" width="60px">
+                    <img src="./images/customer-review-2.jpg" alt="" width="60px">
                     <p>⁠I struggled to find the right property, but Realezi’s team took the stress away.</p>
                     <p class="fw-semibold">Aryan Kapoor</p>
                 </div>
                 <div class="customer-review-card">
-                    <img src="./images/customer-review-3.png" alt="" width="60px">
+                    <img src="./images/customer-review-3.jpg" alt="" width="60px">
                     <p>They found me the best property that matched everything I had in mind.</p>
                     <p class="fw-semibold">Isha Verma</p>
                 </div>
@@ -1702,7 +1702,7 @@
     <script src="./scripts/rive.js"></script>
     <script src="./scripts/lottiesfiles.js"></script>
     <script src="./background-video.js"></script>
-    <!-- <script defer src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script> --> -->
+    <!-- <script defer src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script> -->
     <!-- <script defer src="./rive-animations.js"></script> -->
     <script defer src="section-transition.js"></script>
     <script defer src="./mobile-view.js"></script>
